# auto_match_24

auto_match/: CMakeLists.txt  package.xml
auto_match/config/: amcl.launch.xml  items_config.yaml  mark_map.pkl  test_map.pgm  test_map.yaml
auto_match/config/move_base_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base.launch.xml
auto_match/launch/: auto_match.launch
auto_match/nodes/: YoloQT.py  cali_node.py  detect_ros - 副本.py  detect_ros.py  mark_move.py  pub_flag.py  runtask.py  runtask_.py  test_model.py  test_video.py
auto_match/rviz/: auto_match.rviz
auto_match/scripts/: location_learn_guide.sh
common/: CMakeLists.txt  package.xml
common/action/: MoveStraightDistance.action  TurnBodyDegree.action
common/msg/: ShiftNav.msg
common/src/lib_json/: json_reader.cpp  json_value.cpp  json_writer.cpp
common/srv/: GetFrontBackDistance.srv
spark_alignment_mark/: CMakeLists.txt  package.xml
spark_alignment_mark/action/: TagAdjustment.action
spark_alignment_mark/launch/: bin_spark_alignment_3d_mark.launch  bin_spark_alignment_mark.launch  spark_alignment_3d_mark.launch  spark_alignment_mark.launch
spark_alignment_mark/nodes/: adjustment_3d_node.py  adjustment_node.py
spark_move/b_move_straight_node/: CMakeLists.txt  package.xml
spark_move/b_move_straight_node/scripts/: move.py
spark_move/b_move_straight_node/src/: move_straight_actionlib.cpp  test_move_client.cpp
spark_move/b_turnbody_node/: CMakeLists.txt  package.xml
spark_move/b_turnbody_node/cfg/: PID.cfg
spark_move/b_turnbody_node/src/: test_turnbody_client.cpp  turn_body_actionlib.cpp
spark_move/move_demo/: CMakeLists.txt  package.xml
spark_move/move_demo/launch/: move_demo.launch
spark_move/move_demo/scripts/: move.py
